pamc/src/tests/sample_code/should_fail/type_check/illegal_type/fun_param.ph
type U {
    .U: U,
}

let foo = fun foo_(x: U.U): U {
    U.U
};
